ops/k8s/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nstam
  template:
    metadata:
      labels:
        app: nstam
    spec:
      containers:
        - name: nstam
          image: nickstamat/nstam:$GITHUB_SHA
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 32Mi
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
