ops/k8s/templates/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nstam
  namespace: nstam
  labels:
    app: nstam
spec:
  selector:
    app: nstam
  ports:
    - name: web
      port: 80
